--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
 
+ <html lang="pt-br " dir="ltr">
+   <head>
+     <meta charset="utf-8">
+     <title>preconceito contra racismo</title>
+     <link rel="stylesheet" href="estilo.css">
+   </head>
+   <body>
+     <div class="menuPrincipal">
+       <nav>
+           <ul>
+               <li><a href="index.html">Home</a></li>
+               <li><a href="pagina01.html">significado</a></li>
+           </ul>
+       </nav>
+    </div>
+    <div class="rodape">
+      &copy;Lucas Ando
+
+    </div>  
+ 
+   </body>
+ </html>
