--- a/pagina01.html
+++ b/pagina01.html
@@ -1,1 +1,26 @@
 
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="estilo.css">
+    </head>
+    <body>
+          <div class="menuPrincipal">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="pagina01.html">significado</a></li>
+                </ul>
+            </nav>
+         </div>
+         <h1>o que é racismo?</h1>
+         <h3>O racismo é uma forma de discriminação que leva em conta a raça como fundamento de práticas que culminam em desvantagens ou privilégios para indivíduos, a depender do grupo racial ao qual pertençam. Embora relacionado, o racismo, difere do preconceito racial e da discriminação racial.</h3>
+         <h1>o que o racismo tem de acordo com a lei?</h1>
+         <h3>A Lei 7.716/89, conhecida com Lei do Racismo, pune todo tipo de discriminação ou preconceito, seja de origem, raça, sexo, cor, idade.</h3>
+         <h1>por que o racismo é considerado crime?</h1>
+         <h3>]A Lei 7.716/89, conhecida com Lei do Racismo, pune todo tipo de discriminação ou preconceito, seja de origem, raça, sexo, cor, idade.</h3>
+    </body>
+    </html>
