--- a/pagina01.html
+++ b/pagina01.html
@@ -22,5 +22,8 @@
          <h3>A Lei 7.716/89, conhecida com Lei do Racismo, pune todo tipo de discriminação ou preconceito, seja de origem, raça, sexo, cor, idade.</h3>
          <h1>por que o racismo é considerado crime?</h1>
          <h3>]A Lei 7.716/89, conhecida com Lei do Racismo, pune todo tipo de discriminação ou preconceito, seja de origem, raça, sexo, cor, idade.</h3>
+         <h1>qual é a punição para o racismo?</h1>
+         <h3>
+            Pelo projeto, quem ofender alguém por razão de raça, cor, etnia ou procedência nacional será punido com reclusão de 2 a 5 anos e multa, com aumento da metade se o ataque for cometido com a ajuda de duas ou mais pessoas e nas redes sociais.</h3>
     </body>
     </html>
