--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
  <html lang="pt-br " dir="ltr">
    <head>
      <meta charset="utf-8">
@@ -11,11 +10,12 @@
            <ul>
                <li><a href="index.html">Home</a></li>
                <li><a href="pagina01.html">significado</a></li>
+               <li><a href="pagina02.html">racial</a></li>
            </ul>
        </nav>
     </div>
     <div class="rodape">
-      &copy;Lucas Ando
+      &copy;Lucas Ando 1_H
 
     </div>  
  
