--- a/pagina01.html
+++ b/pagina01.html
@@ -1,4 +1,3 @@
-
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
@@ -13,6 +12,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="pagina01.html">significado</a></li>
+                    <li><a href="pagina02.html">conteúdo</a></li>
                 </ul>
             </nav>
          </div>
